--- a/templates/characters.html
+++ b/templates/characters.html
@@ -95,30 +95,17 @@
           <div class="tab-pane fade" id="attributes" role="tabpanel">
             <h4 class="mb-3">Core Attributes</h4>
             <div class="row">
+              {% comment %} Core D&D Stats {% endcomment %}
+              {% for stat in "Strength,Dexterity,Constitution,Intelligence,Wisdom,Charisma".split(',') %}
               <div class="col-md-4 mb-3">
-                <label class="form-label">Strength</label>
-                <input type="number" name="strength" class="form-control" min="1" max="20" value="10">
+                <label class="form-label">{{ stat }}</label>
+                <div class="input-group">
+                  <input type="number" name="{{ stat|lower }}" class="form-control attribute-input" min="1" max="20"
+                    value="10">
+                  <span class="input-group-text modifier-display">+0</span>
+                </div>
               </div>
-              <div class="col-md-4 mb-3">
-                <label class="form-label">Dexterity</label>
-                <input type="number" name="dexterity" class="form-control" min="1" max="20" value="10">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label class="form-label">Constitution</label>
-                <input type="number" name="constitution" class="form-control" min="1" max="20" value="10">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label class="form-label">Intelligence</label>
-                <input type="number" name="intelligence" class="form-control" min="1" max="20" value="10">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label class="form-label">Wisdom</label>
-                <input type="number" name="wisdom" class="form-control" min="1" max="20" value="10">
-              </div>
-              <div class="col-md-4 mb-3">
-                <label class="form-label">Charisma</label>
-                <input type="number" name="charisma" class="form-control" min="1" max="20" value="10">
-              </div>
+              {% endfor %}
             </div>
 
             <h4 class="mb-3 mt-4">Combat Stats</h4>
@@ -153,7 +140,6 @@
               </div>
             </div>
           </div>
-
 
           <!-- Equipment -->
           <div class="tab-pane fade" id="equipment" role="tabpanel">
@@ -215,6 +201,8 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
+
 </body>
 
 </html>
