--- a/templates/characters.html
+++ b/templates/characters.html
@@ -8,6 +8,7 @@
   <title>Battle Roster | Characters</title>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
