--- a/templates/character_update.html
+++ b/templates/character_update.html
@@ -45,12 +45,30 @@
         <!-- Attributes -->
         <h4 class="mt-4 mb-3">Attributes</h4>
         <div class="row">
-            {% for attr in 'strength dexterity constitution intelligence wisdom charisma'.split %}
             <div class="col-md-4 mb-3">
-                <label for="{{ attr }}" class="form-label">{{ attr|capfirst }}</label>
-                <input type="number" name="{{ attr }}" id="{{ attr }}" value="{{ character[attr] }}" class="form-control" min="1" max="20">
+                <label for="strength" class="form-label">Strength</label>
+                <input type="number" name="strength" id="strength" value="{{ character.strength }}" class="form-control" min="1" max="20">
             </div>
-            {% endfor %}
+            <div class="col-md-4 mb-3">
+                <label for="dexterity" class="form-label">Dexterity</label>
+                <input type="number" name="dexterity" id="dexterity" value="{{ character.dexterity }}" class="form-control" min="1" max="20">
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="constitution" class="form-label">Constitution</label>
+                <input type="number" name="constitution" id="constitution" value="{{ character.constitution }}" class="form-control" min="1" max="20">
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="intelligence" class="form-label">Intelligence</label>
+                <input type="number" name="intelligence" id="intelligence" value="{{ character.intelligence }}" class="form-control" min="1" max="20">
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="wisdom" class="form-label">Wisdom</label>
+                <input type="number" name="wisdom" id="wisdom" value="{{ character.wisdom }}" class="form-control" min="1" max="20">
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="charisma" class="form-label">Charisma</label>
+                <input type="number" name="charisma" id="charisma" value="{{ character.charisma }}" class="form-control" min="1" max="20">
+            </div>
         </div>
 
         <!-- Equipment -->
