--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ html {
 
 /* General styles */
 body {
-  background-color: #2a2a2a;
+  background-color: #1e1e1e;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -224,7 +224,7 @@ header a {
 
 /* Sections */
 .character-sheet .section {
-  border: 2px solid #444;
+  border: 2px solid #1e1e1e;
   padding: 10px;
   margin: 4px;
   background: #f8f0da;
@@ -234,7 +234,7 @@ header a {
 
 .character-sheet .section h3 {
   font-size: 1.2rem;
-  border-bottom: 2px solid #444;
+  border-bottom: 2px solid #1e1e1e;
   padding-bottom: 4px;
   margin-bottom: 1px;
 }
